--- a/Swoosh/Base.lproj/Main.storyboard
+++ b/Swoosh/Base.lproj/Main.storyboard
@@ -50,7 +50,7 @@
                                     <color key="titleColor" red="0.94364320580000005" green="0.96699744460000003" blue="0.90039177839999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="KEU-5x-xz5" kind="show" id="BXQ-Sa-L5h"/>
+                                    <segue destination="KEU-5x-xz5" kind="presentation" modalPresentationStyle="fullScreen" id="BXQ-Sa-L5h"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="GO ALL IN" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="55J-hn-GlI">
@@ -92,14 +92,14 @@
             <objects>
                 <viewController id="KEU-5x-xz5" customClass="LeagueViewController" customModule="Swoosh" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="wb2-g6-LwI">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="desiredLeagueBG" translatesAutoresizingMaskIntoConstraints="NO" id="dRZ-f0-4Ja">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="80" translatesAutoresizingMaskIntoConstraints="NO" id="fgY-wf-0fA">
-                                <rect key="frame" x="0.0" y="40" width="414" height="135"/>
+                                <rect key="frame" x="0.0" y="84" width="414" height="135"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="swooshLogo" translatesAutoresizingMaskIntoConstraints="NO" id="TSO-uc-wWr">
                                         <rect key="frame" x="147.5" y="0.0" width="119" height="20"/>
@@ -120,7 +120,7 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="35" translatesAutoresizingMaskIntoConstraints="NO" id="9ra-1Q-foS">
-                                <rect key="frame" x="20" y="250" width="374" height="220"/>
+                                <rect key="frame" x="20" y="294" width="374" height="220"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WWH-vx-0Pv" customClass="BorderButton" customModule="Swoosh" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="50"/>
@@ -170,7 +170,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nmu-j3-o0A" customClass="BorderButton" customModule="Swoosh" customModuleProvider="target">
-                                <rect key="frame" x="20" y="728" width="374" height="50"/>
+                                <rect key="frame" x="20" y="782" width="374" height="50"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.47425176060000002" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="jhz-Ku-Avp"/>
@@ -185,7 +185,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Udh-AV-1d7">
-                                <rect key="frame" x="20" y="20" width="30" height="25"/>
+                                <rect key="frame" x="20" y="64" width="30" height="25"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="30" id="CcP-af-HmI"/>
                                     <constraint firstAttribute="height" constant="25" id="ko0-dd-0MS"/>
@@ -219,7 +219,7 @@
                     <navigationItem key="navigationItem" id="cIq-bn-XU6"/>
                     <connections>
                         <outlet property="nextBtn" destination="nmu-j3-o0A" id="kZR-h8-mLF"/>
-                        <segue destination="Nps-Gg-nbs" kind="show" identifier="skillViewControllerSegue" id="Tsf-Si-f9v"/>
+                        <segue destination="Nps-Gg-nbs" kind="presentation" identifier="skillViewControllerSegue" modalPresentationStyle="fullScreen" id="Tsf-Si-f9v"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Wp4-33-wbm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -232,14 +232,14 @@
             <objects>
                 <viewController id="Nps-Gg-nbs" customClass="SkillViewController" customModule="Swoosh" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="4Jf-9e-ii0">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="beginnerBallerBG" translatesAutoresizingMaskIntoConstraints="NO" id="iaK-NQ-rhu">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B1R-kG-UXu" customClass="BorderButton" customModule="Swoosh" customModuleProvider="target">
-                                <rect key="frame" x="20" y="728" width="374" height="50"/>
+                                <rect key="frame" x="20" y="782" width="374" height="50"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.47425176060000002" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="lessThanOrEqual" constant="50" id="OJv-x2-wVh"/>
@@ -253,7 +253,7 @@
                                 </state>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="80" translatesAutoresizingMaskIntoConstraints="NO" id="5Xp-dj-zAg">
-                                <rect key="frame" x="0.0" y="40" width="414" height="135"/>
+                                <rect key="frame" x="0.0" y="84" width="414" height="135"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="swooshLogo" translatesAutoresizingMaskIntoConstraints="NO" id="PiW-dX-fIW">
                                         <rect key="frame" x="147.5" y="0.0" width="119" height="20"/>
@@ -274,7 +274,7 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="35" translatesAutoresizingMaskIntoConstraints="NO" id="6Px-Da-4bq">
-                                <rect key="frame" x="20" y="250" width="374" height="50"/>
+                                <rect key="frame" x="20" y="294" width="374" height="50"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4oT-WD-RXm" customClass="BorderButton" customModule="Swoosh" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="175.5" height="50"/>
@@ -303,7 +303,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y6X-U8-efD">
-                                <rect key="frame" x="20" y="20" width="30" height="25"/>
+                                <rect key="frame" x="20" y="64" width="30" height="25"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="25" id="ERa-x8-YfZ"/>
                                     <constraint firstAttribute="width" constant="30" id="WVc-G4-OOB"/>
