--- a/Swoosh/Base.lproj/Main.storyboard
+++ b/Swoosh/Base.lproj/Main.storyboard
@@ -15,9 +15,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="welcomeScreenBG" translatesAutoresizingMaskIntoConstraints="NO" id="0Sf-Ns-xic">
-                                <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="welcomeScreenBG" translatesAutoresizingMaskIntoConstraints="NO" id="0Sf-Ns-xic">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="swooshLogo" translatesAutoresizingMaskIntoConstraints="NO" id="8TQ-C3-BKz">
                                 <rect key="frame" x="147.5" y="84" width="119" height="20"/>
@@ -63,11 +62,15 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="8TQ-C3-BKz" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="30J-Ey-mDS"/>
+                            <constraint firstAttribute="bottom" secondItem="0Sf-Ns-xic" secondAttribute="bottom" id="9YK-uR-fPt"/>
                             <constraint firstItem="b3i-zK-zcS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="SzH-2U-yYr"/>
                             <constraint firstItem="8TQ-C3-BKz" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="VRT-hC-rcC"/>
                             <constraint firstItem="USz-kZ-R5L" firstAttribute="width" secondItem="55J-hn-GlI" secondAttribute="width" multiplier="0.9875" id="Wdc-ss-mfS"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="026-E0-Sfn" secondAttribute="bottom" constant="30" id="cRP-X2-W0V"/>
+                            <constraint firstItem="0Sf-Ns-xic" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="cbd-C8-5me"/>
+                            <constraint firstItem="0Sf-Ns-xic" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="fSb-cV-FR3"/>
                             <constraint firstItem="b3i-zK-zcS" firstAttribute="top" secondItem="USz-kZ-R5L" secondAttribute="bottom" constant="10" id="fjk-p1-WPh"/>
+                            <constraint firstAttribute="trailing" secondItem="0Sf-Ns-xic" secondAttribute="trailing" id="hpI-86-xqK"/>
                             <constraint firstItem="b3i-zK-zcS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="j2y-ee-8ha"/>
                             <constraint firstItem="55J-hn-GlI" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="lhU-AC-dv7"/>
                             <constraint firstItem="55J-hn-GlI" firstAttribute="top" secondItem="8TQ-C3-BKz" secondAttribute="bottom" constant="85" id="nw4-s4-yOe"/>
